# ctf-bot

./: .dockerignore  Cargo.toml  Dockerfile
.github/workflows/: main.yaml
kube/: deployment.yaml  install.sh  ns.yaml  rbac.yaml  secrets.yaml
src/: bot.rs  commands.rs  controller.rs  main.rs  manager.rs  models.rs  repo.rs
